--- a/RapprortV0.1
+++ b/RapprortV0.1
@@ -126,4 +126,6 @@ minimize $\lambda_q(1-a)E(N)E(X)+\lambda_xE(N)[1/a \int_{aR}^\infty x \, \mathrm
 minimize $E(N)[ a^2 \int_0^{R/a} x^2 \, \mathrm dF_X + R^2(1-F_X(R/a)) - (a \int_0^{R/a} x \, \mathrm dF_X  + R(1-F_X(R/a)))^2] \\ +V(N)[a^2 \int_0^{R/a} x^2 \, \mathrm dF_x + R^2(1-F_X(R/a))]$
 
 
+BLBLBLBLLBLB
+
 \end{document}
