--- a/RapprortV0.1
+++ b/RapprortV0.1
@@ -124,8 +124,8 @@ V(min(aX,R))&=&E(min(aX,R)^2)-E(min(aX,R))^2
 The problem finally becomes : \\
 minimize $\lambda_q(1-a)E(N)E(X)+\lambda_xE(N)[1/a \int_{aR}^\infty x \, \mathrm dF_x - R(1-F_X(aR))]$ \\
 minimize $E(N)[ a^2 \int_0^{R/a} x^2 \, \mathrm dF_X + R^2(1-F_X(R/a)) - (a \int_0^{R/a} x \, \mathrm dF_X  + R(1-F_X(R/a)))^2] \\ +V(N)[a^2 \int_0^{R/a} x^2 \, \mathrm dF_x + R^2(1-F_X(R/a))]$
-Version KARIDIO
 
+Hhh
 
 
 \end{document}
